WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
24699
REGRESSION: Java Applets broken
https://bugs.webkit.org/show_bug.cgi?id=24699
Summary
REGRESSION: Java Applets broken
Amit Joshi
Reported
2009-03-19 10:39:06 PDT
Java applets that do not specify 'codebase' in the embed/object tag do not work. This is due to a recent Revision 41568. If codebase is not specified, then HTMLAppletElement::createRenderer sets it using args.set("codeBase", document()->baseURL().string()); This sets it to the page url instead of it's base path.
Attachments
patch
(2.15 KB, patch)
2009-03-23 16:05 PDT
,
Sam Weinig
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Finnur Thorarinsson
Comment 1
2009-03-19 13:08:43 PDT
Amit. Isn't that by design?
http://java.sun.com/j2se/1.4.2/docs/guide/misc/applet.html
Quote: CODEBASE = codebaseURL This OPTIONAL attribute specifies the base URL of the applet--the directory that contains the applet's code. If this attribute is not specified, then the document's URL is used.
Jon@Chromium
Comment 2
2009-03-19 13:57:40 PDT
Also reported against Chromium, see
http://code.google.com/p/chromium/issues/detail?id=8936
Alexey Proskuryakov
Comment 3
2009-03-21 04:21:07 PDT
<
rdar://problem/6707494
>
Sam Weinig
Comment 4
2009-03-23 16:05:29 PDT
Created
attachment 28871
[details]
patch
Anders Carlsson
Comment 5
2009-03-23 16:12:19 PDT
Comment on
attachment 28871
[details]
patch r=me
Sam Weinig
Comment 6
2009-03-23 16:19:18 PDT
FIxed in
r41922
.
Alexey Proskuryakov
Comment 7
2009-03-23 23:41:01 PDT
+String KURL::baseAsString() const +{ + return m_string.left(m_pathAfterLastSlash); +} It's quite confusing that KURL now uses "base" in different meanings. It's especially so when comparing to CFURLRef/NSURL, which remember the base URL they were created with, and have accessors for it.
Sam Weinig
Comment 8
2009-03-24 08:36:16 PDT
(In reply to
comment #7
)
> +String KURL::baseAsString() const > +{ > + return m_string.left(m_pathAfterLastSlash); > +} > > It's quite confusing that KURL now uses "base" in different meanings. It's > especially so when comparing to CFURLRef/NSURL, which remember the base URL > they were created with, and have accessors for it. >
Good point. Do you have a suggestion for a better name?
Alexey Proskuryakov
Comment 9
2009-03-24 09:27:22 PDT
Maybe parentDirectoryPath()? This will also make it clearer that the method only works properly for hierarchical URL schemes.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug