WebCore/platform/KURL.h
@@ -123,6 +123,8 @@ public:
     String ref() const;
     bool hasRef() const;
 
+    String baseAsString() const;
+
     String prettyURL() const;
     String fileSystemPath() const;
 
